--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,5 @@
   "buildCommand": "npm run build",
   "outputDirectory": ".next",
   "installCommand": "npm install",
-  "devCommand": "npm run dev",
-  "alias": ["graycodev-finance-app.vercel.app"]
+  "devCommand": "npm run dev"
 }
